samples/_failures_safe/1761157971_329d88_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9362723a.c: In function ‘main’:
./samples/SAFE/__tmp_9362723a.c:157:12: error: ‘EX’ undeclared (first use in this function)
  157 |     return EX
      |            ^~
./samples/SAFE/__tmp_9362723a.c:157:12: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9362723a.c:157:14: error: expected ‘;’ at end of input
  157 |     return EX
      |              ^
      |              ;
./samples/SAFE/__tmp_9362723a.c:157:5: error: expected declaration or statement at end of input
  157 |     return EX
      |     ^~~~~~
